2007-05-23  John Franks <jrfranks@zmanda.com> (merged by dustin@zmanda.com)
	* common-src/conffile.c: Fix windows compilation warning.

2007-05-23  John Franks <jrfranks@zmanda.com> (merged by dustin@zmanda.com)
	* po/Makefile.am changer-src/scsi-changer-driver.c changer-src/sense.c
	  client-src/unctime.c server-src/amadmin.c server-src/amtape.c
	  server-src/driver.c server-src/reporter.c common-src/amanda.h
	  tape-src/tapeio.h tape-src/tapetype.c:
		Change _() gettext macro to call gettext()
		Create _T() to allow gettext translation of static strings.
	* common-src/security.c:  Create larger buffers for error messages.

2007-05-23  John Franks <jrfranks@zmanda.com> (merged by dustin@zmanda.com)
	* configure.in: Prevent annoying lint usage message from
	  being displayed in configure console output.

2007-05-23  John Franks <jrfranks@zmanda.com> (merged by dustin@zmanda.com)
	* autogen:
		Fix problem of not generating po/Makefile.in on fresh checkout.
	* server-src/logfile.c:
		Always output to logfile in "C" locale.
	* amandad-src/amandad.c changer-src/chg-scsi-chio.c
	  changer-src/chg-scsi.c client-src/calcsize.c client-src/getfsent.c
	  client-src/killpgrp.c client-src/noop.c client-src/rundump.c
	  client-src/runstar.c client-src/runtar.c client-src/selfcheck.c
	  client-src/sendbackup.c client-src/sendsize.c
	  client-src/versionsuffix.c common-src/amfeatures.c
	  common-src/amflock.c common-src/file.c common-src/genversion.c
	  common-src/statfs.c common-src/token.c oldrecover-src/amrecover.c
	  recover-src/amrecover.c restore-src/amfetchdump.c
	  restore-src/amidxtaped.c restore-src/amrestore.c server-src/amadmin.c
	  server-src/amcheck.c server-src/amcleanupdisk.c server-src/amflush.c
	  server-src/amindexd.c server-src/amlabel.c server-src/amlogroll.c
	  server-src/amtape.c server-src/amtrmidx.c server-src/amtrmlog.c
	  server-src/chunker.c server-src/diskfile.c server-src/driver.c
	  server-src/dumper.c server-src/getconf.c server-src/infofile.c